Adição de comentários

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Portfolio da Maria</title>
 </head>
 <body>
+
+    <!--HEADER AND MENU-->
     <div class="container">
         <div id="header">
-            <h1>Portfolio</h1>
+            <h1>Portfólio</h1>
         </div>
         <div id="menu">
             <ul>
@@ -22,6 +24,7 @@
             </ul>
         </div>
     </div>
+    <!--CALL TO ATTENTION-->
     <div class="container">
         <div id="headerCta">
             <h1>
@@ -32,12 +35,13 @@
                 Sou programadora e gostaria de apresentar meu<br>
                 trabalho para você através deste portfólio.
             </p>
-            <a id="buttonCta" href="">Meus Serviços</a>
+            <a id="buttonCta" href="#underServices">Meus Serviços</a>
         </div>
         <div id="headerImg">
             <img src="images/maria.svg" alt="Puutz">
         </div>
     </div>
+    <!--CLIENTS LOGOS-->
     <div class="container" id="clients">
         <div id="clientText">
             Alguns dos<br>
@@ -53,8 +57,9 @@
             <img src="images/spotify.svg" alt="">
         </div>
     </div>
-    <div class="container">
-        <div id="subServices">
+    <!--UNDER SERVICES-->
+    <div class="container" id="underServices">
+        <div>
             <h2 class="red">Conheça</h2>
             <h1 class="black">Meus Serviços</h1>
             <p class="pcgray">
@@ -63,6 +68,7 @@
             </p>
         </div>
     </div>
+    <!--SERVICES-->
     <div class="container" id="services">
         <div class="textCenter">
             <img src="images/icon1.svg" alt="Puutz">
@@ -89,6 +95,7 @@
             </p>
         </div>
     </div>
+    <!--CONTACTS-->
     <div class="container" id="contact">
         <div id="contactImg">
             <img src="images/diagnostic.svg" alt="Puutz">
@@ -110,12 +117,14 @@
             </form>
         </div>
     </div>
+    <!--PORTFÓLIO TITLE-->
     <div class="container" id="portifolioTitle">
         <div>
             <h2 class="red">Conheça meu trabalho</h2>
-            <h1 class="black">Porfolio</h1>
+            <h1 class="black">Porfólio</h1>
         </div>
     </div>
+    <!--PORTFÓLIO IMAGES-->
     <div class="container" >
         <div class="portifolioImg">   
             <img src="images/portfolio1.svg" alt="Puutz">
